--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Front-End</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+<div id ="container">
+  <h1>To Do List</h1>
+  <div id="toDo">
+    <p>Add new items using the space below. Drag and drop to reorder.</p>
+    <p id="date"></p>
+    <ul id="sortable">
+      <li><button class="complete">&#x2713</button> <button class="delete">x</button><span class="items"> Do laundry </span></li>
+      <li><button class="complete">&#x2713</button> <button class="delete">x</button><span class="items"> Feed the cat</span></li>
+      <li><button class="complete">&#x2713</button> <button class="delete">x</button><span class="items"> Pick up dry cleaning</span></li>
+    </ul>
+    <form>
+      <input id="newItem" type="text" placeholder="Add new item">
+      <input id="submit" type="submit" value="Submit">
+      <input id="reset" type="reset" value="Clear">
+    </form>
+  </div>
+</div>
+
+
+
+<script
+  src="https://code.jquery.com/jquery-2.2.4.js"
+  integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+  crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+ <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
